--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th="https://thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
 <head>
     <title>EventosApp</title>
+
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
     <body>
-        <h3>Lista de eventos</h3>
-        <h1><a href="/CadastroEvento">Cadastrar Evento</a></h1>
-
-    <div th:each="evento : ${eventos}">
-        <div class="row">
-            <p><span th:text="${evento.nomeEvento}"></span></p>
-            <p><span th:text="${evento.localEvento}"></span></p>
-            <p><span th:text="${evento.dataEvento}"></span></p>
-            <p><span th:text="${evento.horaEvento}"></span></p>
+        <h3>EventosApp</h3>
+        <div id="telaHome">
+        <a href="/cadastroEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Eventos</a>
+        <a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lisatar Eventos</a>
         </div>
-    </div>
+
     </body>
+        <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 </html>
