--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
         <h3>EventosApp</h3>
         <div id="telaHome">
         <a href="/cadastroEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Eventos</a>
-        <a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lisatar Eventos</a>
+        <a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">view_list</i>Listar Eventos</a>
         </div>
 
     </body>
