Refatoração de layouts e botões para deletar eventos

--- a/src/main/resources/static/materialize/css/teste.css
+++ b/src/main/resources/static/materialize/css/teste.css
@@ -9,3 +9,15 @@
 #viewEvents{
     margin-top: 7rem;
 }
+#btnCadList{
+    display: flex;
+    justify-content: space-between;
+}
+#list{
+    margin-top: 5rem;
+    margin-bottom: -7rem;
+}
+#adcConvdidados{
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
