--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,12 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
     <body>
+    <div class="container">
         <h3>EventosApp</h3>
         <div id="telaHome">
-        <a href="/cadastroEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Eventos</a>
-        <a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">view_list</i>Listar Eventos</a>
+            <a href="/cadastroEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Cadastrar Eventos</a>
+            <a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">view_list</i>Listar Eventos</a>
         </div>
-
+    </div>
     </body>
         <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
