--- a/src/main/resources/static/materialize/css/teste.css
+++ b/src/main/resources/static/materialize/css/teste.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #f2f2f2;
+}
+
 #newEvent{
     margin-top: 15px;
 }
@@ -20,4 +24,50 @@
 #adcConvdidados{
     margin-top: 2rem;
     margin-bottom: 1rem;
+}
+#base {
+    margin-top: 100px;
+    width: 500px;
+    height: 800px;
+    background: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 77px 55px 33px 55px;
+    -webkit-box-shadow: 9px 7px 5px rgba(50, 50, 50, 0.77);
+    -moz-box-shadow:    9px 7px 5px rgba(50, 50, 50, 0.77);
+    box-shadow:         9px 7px 5px rgba(50, 50, 50, 0.77);
+}
+
+#form{
+    margin-top: 100px;
+    color: #777777;
+    border-width: 5px;
+    border-style: none;
+    border-bottom-color: #777777;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 1.2em;
+
+}
+#welcome{
+  text-align:center;
+  font-family: 'Courgette', cursive;
+  font-size: 5rem;
+}
+
+#btnEntrar{
+    border-radius: 100px;
+    background-color: #0097a7;
+    border: none;
+    color: white;
+    text-align: center;
+    font-size: 15px;
+    padding: 20px;
+    width: 250px;
+    cursor: pointer;
+    margin: 5px;
+    margin-left: 10px;
+}
+#LinkCadastrar{
+    margin-top: 15rem;
+    margin-left: 1.5rem;
 }
