--- a/src/main/resources/static/materialize/css/teste.css
+++ b/src/main/resources/static/materialize/css/teste.css
@@ -37,9 +37,24 @@ body{
     -moz-box-shadow:    9px 7px 5px rgba(50, 50, 50, 0.77);
     box-shadow:         9px 7px 5px rgba(50, 50, 50, 0.77);
 }
+#baseUsuario {
+    margin-top: 100px;
+    width: 500px;
+    height: 700px;
+    background: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 77px 55px 33px 55px;
+    -webkit-box-shadow: 9px 7px 5px rgba(50, 50, 50, 0.77);
+    -moz-box-shadow:    9px 7px 5px rgba(50, 50, 50, 0.77);
+    box-shadow:         9px 7px 5px rgba(50, 50, 50, 0.77);
+    margin-left: 30%;
+    margin-bottom: -1000px;
+}
 
 #form{
-    margin-top: 100px;
+    margin-top: 80px;
+    margin-bottom: 40rem;
     color: #777777;
     border-width: 5px;
     border-style: none;
@@ -70,4 +85,11 @@ body{
 #LinkCadastrar{
     margin-top: 15rem;
     margin-left: 1.5rem;
+}
+
+#btnCadList{
+    display: flex;
+    justify-content: center;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
