--- a/src/main/resources/templates/usuario/telaCadastro.html
+++ b/src/main/resources/templates/usuario/telaCadastro.html
@@ -19,54 +19,34 @@
 <form method="post" class="container" id="form">
     <div id="baseUsuario">
         <div class="input-field col s6">
-            Nome: <input type="text"
-                         name="nomeUsuario"
-                         id="nomeUsuario"
-                         required
-                         value=""
-    />
-            Ultimo nome:<input type="text"
-                         name="ultimoNome"
-                         id="ultimoNome"
-                         required
-                         value=""
-        />
-        </div>
-
-        <div class="input-field col s3">
-            Email: <input type="email"
-                         name="email"
-                         id="email"
-                         required
-                         value=""
-        />
-        </div>
-
-        <div class="input-field col s3">
-            Senha: <input type="password"
-                         name="senha"
-                         id="senha"
-                         required
-                         value=""
-        />
-        </div>
-
-        <div class="input-field col s3">
-            Confirme a senha: <input type="password"
-                          name="confirmSenha"
-                          id="confirmSenha"
+            Login: <input type="text"
+                          name="login"
+                          id="login"
                           required
                           value=""
         />
-        </div>
-            <div id="btnCadList">
-              <button class="btn waves-effect waves-light" type="submit" name="action">
-             <i class="material-icons left">add_circle_outline</i>Cadastrar</button>
-        </div>
+
+            Nome Completo:<input type="text"
+                                 name="nomeCompleto"
+                                 id="nomeCompleto"
+                                 required
+                                 value=""
+        />
+
+            <div class="input-field col s3">
+                Senha: <input type="password"
+                              name="senha"
+                              id="senha"
+                              required
+                              value=""
+                />
+            </div>
+         <div id="btnCadList">
+             <button class="btn waves-effect waves-light" type="submit" name="action">
+            <i class="material-icons left">add_circle_outline</i>Cadastrar</button>
+         </div>
     </div>
 </form>
-
-
 </body>
 
 <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
